<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.musicalquiz.view.fragments.HomeFragment"
        android:label="@string/accueil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.musicalquiz.view.fragments.SearchFragment"
        android:label="@string/recherche">
        <action
            android:id="@+id/navigation_details"
            app:destination="@id/navigation_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="com.example.musicalquiz.view.fragments.PlaylistFragment"
        android:label="@string/playlist"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.musicalquiz.view.fragments.QuizFragment"
        android:label="@string/quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.musicalquiz.view.fragments.DetailsFragment"
        android:label="@string/d_tails"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="itemId"
            app:argType="long" />
        <argument
            android:name="isTrack"
            app:argType="boolean" />
    </fragment>

</navigation> 